[FIX] Update function name and version, ignore log files and build info
- Ignored log files and TypeScript build info files in the `.npmignore` file
- Renamed the function `addLineToContent` to `AddLineToContent` in `codeowners/index.ts`
- Updated the function documentation to reflect the new function name in `codeowners/index.ts`
- Updated the version from `1.0.1` to `1.0.3` in the `package.json` file
- Modified the `co:antlr4ts` script to output the generated code in a separate `codeowners` folder in the `package.json` file
- Added a `types` field pointing to `github-codeowners-parser.d.ts` in the `package.json` file

--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "github-codeowners-parser",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "Antlr4 generated CODEOWNERS parser",
   "main": "dist/index.js",
   "scripts": {
     "test": "jest",
-    "co:antlr4ts": "antlr4ts -o src/app/parsers/codeowners -visitor CODEOWNERSLexer.g4 CODEOWNERSParser.g4",
+    "co:antlr4ts": "antlr4ts -o codeowners -visitor CODEOWNERSLexer.g4 CODEOWNERSParser.g4",
     "co:build": "tsc"
   },
+  "types": "github-codeowners-parser.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/emmett08/github-codeowners-parser.git"
