[FIX] Improve TypeScript configuration and package.json
- Update `tsconfig.json` to enable declaration and declarationMap options, set outDir option, and enable esModuleInterop and forceConsistentCasingInFileNames options
- Add `index.d.ts` file exporting modules from codeowners and parser directories and the substring type
- Add `index.ts` file to export codeowners and substring modules
- Remove ignore rule for `.d.ts` files in `.gitignore`
- Update version in `package.json` to 1.0.7 and add types field pointing to dist/index.d.ts
- Modify co:build script to use "npx tsc" and add co:declarations script for generating TypeScript declarations.

--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "github-codeowners-parser",
-  "version": "1.0.3",
+  "version": "1.0.7",
   "description": "Antlr4 generated CODEOWNERS parser",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "test": "jest",
     "co:antlr4ts": "antlr4ts -o codeowners -visitor CODEOWNERSLexer.g4 CODEOWNERSParser.g4",
-    "co:build": "tsc"
+    "co:build": "npx tsc",
+    "co:declarations": "npx tsc --declaration"
   },
-  "types": "github-codeowners-parser.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/emmett08/github-codeowners-parser.git"
